# Callora-Contracts

./: BENCHMARKS.md  Cargo.toml  EVENT_SCHEMA.md  INVARIANTS.md  PR_UPGRADE_BODY.md  SECURITY.md  SETTLEMENT_IMPLEMENTATION.md  UPGRADE.md  build_output.txt  package.json  patch_tests.py  tsconfig.json
.github/PULL_REQUEST_TEMPLATE/: multi-asset-settlement-417.md  multi-asset-settlement.md
.github/workflows/: ci.yml  e2e.yml  ttl-doctor.yml  wasm-size.yml
contracts/helpers/: Cargo.toml
contracts/helpers/src/: lib.rs  snapshot_diff.rs
contracts/revenue_pool/: BATCH_TRANSFER_IMPLEMENTATION.md  Cargo.toml  YIELD_DEPOSIT.md
contracts/revenue_pool/proptest-regressions/: test_proptest.txt
contracts/revenue_pool/src/: events.rs  lib.rs  test.rs  test_balance.rs  test_error_codes.rs  test_invariant.rs  test_proptest.rs
contracts/revenue_pool/tests/: gas.rs
contracts/settlement/: INVARIANTS.md
contracts/settlement/src/: admin.rs  errors.rs  events.rs  lib.rs  limits.rs  migrate.rs  pagination.rs  test.rs  test_admin_migration.rs  test_batch_receive_fuzz.rs  test_error_codes.rs  test_views.rs  (+4 more)
contracts/vault/: STORAGE.md
coverage/: cobertura.xml  tarpaulin-report.html
docs/: ACCESS_CONTROL.md  ADMIN_BALANCE_MIGRATION.md  AUDIT_BUNDLE.md  ERROR_CODES.md  MIGRATION.md  REVENUE_POOL_ADMIN_ROTATION.md  STORAGE_TTL_DOCTOR.md  wasm-budget.md
docs/interfaces/: revenue_pool.json  settlement.json  vault.json
scripts/: check-event-shape.sh  check-wasm-size.sh  e2e_setup.rs  gas_profile.sh  storage-ttl-doctor.ts
tests/: e2e_full_cycle.rs  storage-ttl-doctor.test.ts
(+20 files in other folders)
