[package]
name = "callora-contracts-e2e"
version = "0.0.0"
edition = "2021"
publish = false

[workspace]
resolver = "2"
members = [
    "contracts/vault",
    "contracts/revenue_pool",
    "contracts/settlement",
    "contracts/helpers",
]
default-members = [
    "contracts/vault",
    "contracts/revenue_pool",
    "contracts/settlement",
    "contracts/helpers",
]


[workspace.dependencies]
soroban-sdk = "22"

[dev-dependencies]
callora-vault = { path = "contracts/vault" }
callora-settlement = { path = "contracts/settlement" }
callora-revenue-pool = { path = "contracts/revenue_pool" }
soroban-sdk = { workspace = true, features = ["testutils"] }

[profile.dev]
overflow-checks = true

[profile.release]
# Size optimization settings to keep WASM under Soroban's 64KB limit
opt-level = "z"           # Optimize for size (more aggressive than "s")
overflow-checks = true    # Keep overflow checks for safety
debug = 0                 # No debug info
strip = "symbols"         # Remove symbol table and debug info
debug-assertions = false  # Disable debug assertions in release
panic = "abort"           # Smaller panic handler (no unwinding)
codegen-units = 1         # Better optimization (slower compile, smaller binary)
lto = true                # Link-time optimization across all crates
